# calendar_generator

./: .gitignore  README.md  index.html  main.py  new_function.md  presentation.md  pyproject.toml  role.md
app/: crud.py  database.py  import_store.py  models.py  pdf_parser.py
scripts/: create_data.py  create_data_pdf.py
static/: style.css
templates/: import.html  index.html
templates/partials/: enrolled_cell.html  enrollment_summary.html  import_preview.html  import_success.html  search_results.html  subject_list.html
