[project]
name = "calendar-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pdfplumber>=0.11.9",
    "python-multipart>=0.0.27",
    "sqlmodel>=0.0.38",
    "starlette==0.46.2",
    "uvicorn>=0.46.0",
]
